--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+yunohost-admin (12.0.1) testing; urgency=low
+
+  Initial testing release
+
+ -- Alexandre Aubin <alex.aubin@mailoo.org>  Fri, 26 Jul 2024 22:03:55 +0200
+
 yunohost-admin (12.0) unstable; urgency=low
 
   Initial commit to add debian build
