--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+yunohost-portal (12.0.5) testing; urgency=low
+
+  - feat: add different style/theme for app tiles ([#20](http://github.com/YunoHost/yunohost-portal/pull/20))
+  - i18n: Translations updated for Turkish
+
+  Thanks to all contributors <3 ! (axolotle, eric_G, Furkan Samed Acet)
+
+ -- Alexandre Aubin <alex.aubin@mailoo.org>  Wed, 30 Oct 2024 00:18:43 +0100
+
 yunohost-portal (12.0.4) testing; urgency=low
 
   - Add a few class names + data attributes (label hash, initials) for easier theming and attempt to reproduce the legacy periodic-table look ([#16](http://github.com/YunoHost/yunohost-portal/pull/16))
